fix misalignment of back arrow on mobile

--- a/src/scss/app.scss
+++ b/src/scss/app.scss
@@ -201,6 +201,7 @@ button.custom-button.mini {
   .arrow-back {
     height: 10px;
     width: 10px;
+    top: 4px;
     border-left: 5px solid #222;
     border-bottom: 5px solid #222;
     position: absolute;
